--- a/src/styles/components/nav.css
+++ b/src/styles/components/nav.css
@@ -6,12 +6,15 @@
 
   .nav-wrapper {
     @apply overflow-auto;
+    @apply w-full;
     @apply flex flex-col justify-end lg:flex-row;
     @apply absolute top-full left-1/2 -translate-x-1/2 lg:static lg:top-0 lg:left-1/2 lg:translate-x-0;
     height: calc(100vh - 100%);
   }
 
   .nav-wrapper .nav__list {
+    @apply text-2xl text-center;
+    @apply w-full space-y-4;
     @apply flex flex-col items-center;
     @apply lg:flex-row;
   }
@@ -25,8 +28,8 @@
 
   .social-links--wrapper {
     @apply text-primary;
-    /* @apply hidden; */
-    @apply transition opacity-0;
+    @apply flex justify-center;
+    @apply transition duration-300 opacity-0 -translate-x-10;
     padding-bottom: var(--fv-8-4vh);
   }
 
@@ -36,6 +39,10 @@
     @apply before:transition before:duration-1000 before:origin-center;
     @apply before:bg-white before:rounded-full;
     @apply before:w-2vmax before:h-2vmax before:scale-0 before:-top-148mvax before:-left-148mvax;
+  }
+
+  .site-head .container {
+    @apply contents lg:block;
   }
 
   .site-head.burger-opened {
@@ -63,34 +70,19 @@
     @apply opacity-100 translate-y-0;
   }
 
-  .burger-opened .nav__list {
-    @apply text-2xl;
-    @apply space-y-4;
-  }
-
-  .burger-opened .site-head__inner {
-    /* @apply flex-col justify-center; */
-  }
-
   .burger-opened .main-logo {
     @apply text-primary;
-    /* @apply absolute left-1/2 -translate-x-1/2 top-6 translate-y-0; */
-  }
-
-  .burger-opened .button-wrapper {
-    /* @apply absolute m-6 right-0 top-0 ; */
   }
 
   .burger-opened .button {
-    @apply text-primary border border-primary;
+    @apply text-primary border-solid border-secondary;
+  }
+
+  .burger-opened .button:hover {
+    @apply text-white border-secondary;
   }
 
   .burger-opened .social-links--wrapper {
-    @apply opacity-100;
-    /* @apply block; */
-  }
-
-  .burger-opened .social-links__list {
-    /* @apply justify-center mb-8; */
+    /* @apply opacity-100; */
   }
 }
